--- a/PotatoVN.App.PluginBase/PotatoVN.App.PluginBase.csproj
+++ b/PotatoVN.App.PluginBase/PotatoVN.App.PluginBase.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="1.3.0" />
+    <PackageReference Include="Lib.Harmony" Version="2.4.2" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.4948">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -24,6 +25,14 @@
     <ProjectReference Include="..\PotatoVN\GalgameManager.WinApp.Base\GalgameManager.WinApp.Base.csproj">
       <Private>false</Private>
     </ProjectReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Strings\**\*.json" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(Configuration)'!='Debug'">
+    <Compile Remove="HotReload\**\*.cs" />
   </ItemGroup>
   <ItemGroup>
     <Resource Remove="artifacts\plugin.pvnplugin\PotatoVN.App.PluginBase\Controls\UserControl1.xaml" />
